Updated the connection string to use SQLEXPRESS.

--- a/Lab106/Completed Solution/FastCars.CustomerRelations/App.config
+++ b/Lab106/Completed Solution/FastCars.CustomerRelations/App.config
@@ -33,7 +33,7 @@
   <connectionStrings>
     <!-- SqlServer -->
     <add name="NServiceBus/Transport"
-         connectionString="Data Source=SELENE\SELENA;Initial Catalog=NServiceBus;Integrated Security=True"/>
+         connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=NServiceBus;Integrated Security=True"/>
   </connectionStrings>
 
 </configuration>
